--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -2,6 +2,13 @@
   <h2>新增职位</h2>
   <hr>
   <%= form_for @job do |f| %>
+  <% if @job.errors.any? %>
+  <ul>
+    <% @job.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+  </ul>
+  <% end %>
   职位
   <%= f.text_field :title %>
   <br>
