add chunzhao css

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,41 @@
-<h1> Hello World! </h1>
+
+
+   <div class="jumbotron">
+     <h1 class="title">春聘-4倍日薪</h1>
+     <p class="slogan">
+     给不能春节回家过年的你,
+     给春节找不到员工的你
+     <br>
+      无论你是在工作还是在陪伴家人!希望大家都有个开心的春节!
+     </p>
+     <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">马上应征</a></p>
+   </div>
+
+
+   <div class="container text-center">
+     <h2>春聘-致力于解决节假日工作问题</h2>
+     <br>
+
+     <div class="row">
+       <div class="col-sm-4">
+         <img src="http://img.weixinyidu.com/161214/770fc2a5.jpg_slt2" class="img-responsive" style="width:88%" alt="Image">
+         <p>我们的用人单位</p>
+       </div>
+       <div class="col-sm-4">
+         <img src="http://www.ouhua.info/2016/0720/U372P5060T2D8048F39DT20160720043915.jpg" class="img-responsive" style="width:100%" alt="Image">
+         <p>我们的人员素质</p>
+       </div>
+       <div class="col-sm-4">
+         <div class="well">
+          <p href="/jobs">春节了，务工人员返乡，谁来守护空城？面对春节用工晃，我们提供完整解决方案！</p>
+         </div>
+         <div class="well">
+          <p href="/jobs">春节了，各种原因不能在家过节，既然不能陪伴，那给家人加倍再加倍补偿！</p>
+         </div>
+       </div>
+     </div>
+   </div><br>
+
+   <div class="container">
+      <img src="http://data.chinatravel.com/images/focus/chinese-new-year/chinese-new-year-1200.jpg" alt="Image">
+   </div>
