--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -2,11 +2,11 @@
   <%= link_to("Add a job", new_admin_job_path, :class => "btn btn-default") %>
 </div>
 <br><br>
-<table class="table table-boldered" >
+<table class="table table-boldered table-striped custab" >
   <thead>
     <tr>
-      <td>职缺</td>
-      <td>收到履历数量</td>
+      <td>招聘职位</td>
+      <td>收到简历数量</td>
       <td>薪资下限</td>
       <td>薪资上限</td>
       <td>管理选项</td>
@@ -25,14 +25,25 @@
     <td><%= job.wage_upper_bound%></td>
 
     <td>
-    <%= link_to("Edit", edit_admin_job_path(job)) %>
-    <%= link_to("Delete", admin_job_path(job), :method => :delete, :data=> {:confirm => "Are you sure?"}) %>
+    <%= link_to edit_admin_job_path(job),:class => "btn btn-xs btn-info" do %>
+    <i class="fa fa-pencil"></i>
+    <% end %>
+    <%= link_to admin_job_path(job), :method => :delete, :class => "btn btn-xs btn-danger", :data=> {:confirm => "Are you sure?"} do %>
+    <i class="fa fa-trash-o"></i>
+    <% end %>
+
 
     <% if job.is_hidden %>
 
-    <%= link_to("Publish", publish_admin_job_path(job) , :method => :post, :class => "btn btn-xs btn-default") %>
+    <%= link_to publish_admin_job_path(job) , :method => :post, :class => "btn btn-xs btn-success" do %>
+    <i class="fa fa-eye"></i>
+    <% end %>
+
     <% else %>
-    <%= link_to("Hide", hide_admin_job_path(job) , :method => :post, :class => "btn btn-xs btn-default") %>
+    <%= link_to hide_admin_job_path(job) , :method => :post, :class => "btn btn-xs btn-warning" do %>
+    <i class="fa fa-eye-slash"></i>
+    <% end %>
+
     <% end %>
 
     </td>
