--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -2,15 +2,23 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">Job listing</a>
+      <a class="navbar-brand" href="/"><i class="fa fa-jpy" aria-hidden="true"></i>春聘</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">主页</a></li>
+        <li><a href="/jobs">找人</a></li>
+        <li><a href="/jobs">找工作</a></li>
+        <li><a href="/jobs">关于我们</a></li>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if !current_user %>
-        <li><%= link_to("注册", new_user_registration_path) %> </li>
-        <li><%= link_to("登入", new_user_session_path) %></li>
+        <li><a href="/users/sign_up"><span class="glyphicon glyphicon-user"></span>注册</a></li>
+        <li><a href="/users/sign_in"><span class="glyphicon glyphicon-log-in"></span>登入</a></li>
+
+
         <% else %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -19,7 +27,7 @@
           </a>
           <ul class="dropdown-menu">
             <% if current_user.admin? %>
-            <li><%= link_to("Admin panel", admin_jobs_path) %></li>
+            <li><%= link_to("管理员", admin_jobs_path) %></li>
             <% end %>
             <li><%= link_to("登出", destroy_user_session_path,method: :delete) %></li>
           </ul>
