--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,10 @@
 @import "bootstrap";
 @import "font-awesome";
 
+#myCarousel{
+
+}
+
 .custab{
   border: 1px solid #ccc;
   padding: 5px;
@@ -31,108 +35,123 @@
   transition: 0.5s;
 }
 
-
 .jumbotron {
-  background-image:url('http://p3.pstatp.com/large/1af00077221fb9983bc');
+  // background-image: url("https://ww2.sinaimg.cn/large/006tKfTcly1fbwcuw4rfbj303y03ymxi.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
-  padding-bottom: 110px;
-
+  background-position: left center;
+  padding: 50px 25px;
+    // background-color: #f4511e; /* Orange */
+    // color: #ffffff;
 }
 
-.container-fluid .jumbotron{
-  padding-bottom: 110px;//内部的底部边距，这样按钮不会很靠近底部了
-  margin: 0 -15px 20px;//顶部margin为0，因此可以直接接着导航栏；左右margin为负15，因此可以顶到浏览器的边缘（抵消 container-fluid 的 15px 左右padding);底部margin为20，会跟下面的内容撑开距离
-  border-radius: 0;//圆角为0
+.container-fluid{
+  padding: 0 50px  0 50px;
+  // padding: ;
 }
 
-.title {
-  font-family: "Helvetica Neue", "Microsoft Yahei", 微软雅黑;
-  text-align: center;;
-  margin-top: 200px;
-  margin-bottom: 80px;
+.bg-grey {
+    background-color: #f6f6f6;
+  }
 
+  .logo {
+      font-size: 200px;
+      color: #D2051E;
+  }
+  @media screen and (max-width: 768px) {
+      .col-sm-4 {
+          text-align: center;
+          margin: 25px 0;
+      }
+  }
 
+  .logo-small {
+      color: #D2051E;
+      font-size: 50px;
+  }
 
-}
-
-.jumbotron h1, .jumbotron .h1 {
-    color: #D2051E;
-
-}
-
-
-
-.slogan {
-  margin-top: 10px;
-  margin-bottom: 50px;
-  text-align: center;
-
-  color: #D2051E;
-  top: 12px;
-}
-
-.lead {
-  margin-bottom: 60px;
-  text-align: center;
-  color: white;
-}
-
-.caption {
-  margin: 30px;
-  text-align: center;
-  top: 20px;
-}
 
 .thumbnail {
-    border: 0 none;
-    box-shadow: none;
-    margin-top: 60px;
+  padding: 0 0 15px 0;
+  border: none;
+  border-radius: 0;
 }
 
-.navbar-default {
-    background-color: white;//背景颜色
-    border-color: white;//边框色
-    margin-bottom: 0;//底部 margin 不撑开距离
+.thumbnail img {
+    width: 50%;
+    height: 50%;
+    margin-bottom: 5px;
 }
 
-@media (min-width: 768px) {
-    .navbar {
-        border-radius: 0;//圆角为0
-    }
+
+.panel {
+    border: 1px solid #D2051E;
+    border-radius:0;
+    transition: box-shadow 0.5s;
 }
 
-.navbar-default .navbar-brand {
-   color: #D2051E;//字体颜色
-   padding: 10px 15px;//上下10px,左右15px
-   line-height: 30px;//文字行高
+.panel:hover {
+    box-shadow: 5px 0px 40px rgba(0,0,0, .2);
 }
 
-.navbar-default .navbar-brand:hover,
-.navbar-default .navbar-brand:focus {
-  color: #F4511E;//鼠标放置在链接上的文字颜色
-  background-color: transparent;//鼠标放置在链接上的背景颜色，这里设为透明
+.panel-footer .btn:hover {
+    border: 1px solid #D2051E;
+    background-color: #fff !important;
+    color: #f4511e;
 }
 
-.navbar-default .navbar-nav > li > a{
-  color: #D2051E;
+.panel-heading {
+    color: #fff !important;
+    background-color: #D2051E !important;
+    padding: 10px;
+    border-bottom: 1px solid transparent;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
 
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
-  color: #D2051E;
-  background-color: transparent;
-}
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
-  color: #D2051E;
-  background-color: #FFE0B2;
+.panel-footer {
+    background-color: #fff !important;
 }
 
-.navbar-default .navbar-nav > .open > a,
-.navbar-default .navbar-nav > .open > a:focus,
-.navbar-default .navbar-nav > .open > a:hover {
-    background-color: #FFE0B2;
-    color: #D2051E;
+.panel-footer h3 {
+    font-size: 32px;
+}
+
+.panel-footer h4 {
+    color: #aaa;
+    font-size: 14px;
+}
+
+.panel-footer .btn {
+    margin: 15px 0;
+    background-color: #D2051E;
+    color: #fff;
+}
+
+
+
+.navbar {
+    margin-bottom: 0px;
+    background-color: white;
+    z-index: 9999;
+    border: 0;
+    font-size: 15px !important;
+    line-height: 1.42857143 !important;
+    letter-spacing: 3px;
+    border-radius: 0;
+}
+
+.navbar li a, .navbar .navbar-brand {
+    color: #D2051E !important;
+}
+
+.navbar-nav li a:hover, .navbar-nav li.active a {
+    color: #f4511e !important;
+    background-color: #fff !important;
+}
+
+.navbar-default .navbar-toggle {
+    border-color: transparent;
+    color: #fff !important;
 }
