--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,5 +1,8 @@
-<footer class="container" style="margin-top: 100px;">
-  <p class="text-center">Copyright ©2016 Job listing
+<footer class="container text-center" style="margin-top: 100px;">
+  <a href="#myPage" title="To Top">
+    <span class="glyphicon glyphicon-chevron-up"></span>
+  </a>
+  <p class="text-center">Copyright ©2017
     <br>Design by
       <a href="http://courses.growthschool.com/courses/rails-101" target=_new>xdite</a>
     </p>
