--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,22 +1,41 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+
+
+
       <a class="navbar-brand" href="/"><i class="fa fa-jpy" aria-hidden="true"></i>春聘</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">主页</a></li>
+        <li class="dropdown">
+            <a href="/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">全国[切换城市]<span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+                <li><a href="/jobs">北京</a></li>
+                <li><a href="/jobs">上海</a></li>
+                <li><a href="/jobs">广州</a></li>
+                <li><a href="/jobs">深圳</a></li>
+            </ul>
+          </li>
+
+        <li ><a href="/">主页</a></li>
         <li><a href="/jobs">找人</a></li>
         <li><a href="/jobs">找工作</a></li>
-        <li><a href="/jobs">关于我们</a></li>
+        <li><a href="#about">关于我们</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if !current_user %>
-        <li><a href="/users/sign_up"><span class="glyphicon glyphicon-user"></span>注册</a></li>
-        <li><a href="/users/sign_in"><span class="glyphicon glyphicon-log-in"></span>登入</a></li>
+        <li><a href="/users/sign_up"><span class="glyphicon glyphicon-user"></span> 注册</a></li>
+        <li><a href="/users/sign_in"><span class="glyphicon glyphicon-log-in"></span> 登入</a></li>
 
 
         <% else %>
