--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
        <li data-target="#myCarousel" data-slide-to="1"></li>
        <li data-target="#myCarousel" data-slide-to="2"></li>
      </ol>
-     <div class="carousel-inner" role="listbox" style="height:400px">
+     <div class="carousel-inner" role="listbox" style="max-height:400px">
        <div class="item active">
          <img src="https://d3fw5vlhllyvee.cloudfront.net/tophat/s/3a465a7/index-hero-collage-2048w.jpg" alt="First slide">
          <div class="container">
@@ -141,28 +141,28 @@
   <div class="row text-center">
     <div class="col-sm-3">
       <div class="thumbnail">
-        <img src="https://ww4.sinaimg.cn/large/006tKfTcgy1fbwgiv9wo1j304g028aa0.jpg" alt="alibaba">
+        <img src="https://ww4.sinaimg.cn/large/006tKfTcgy1fbwgiv9wo1j304g028aa0.jpg" class="img-responsive" alt="alibaba">
         <p><strong>阿里巴巴</strong></p>
         <p>招聘春节园区治安</p>
       </div>
     </div>
     <div class="col-sm-3">
       <div class="thumbnail">
-        <img src="https://ww2.sinaimg.cn/large/006tKfTcgy1fbwglh19dwj304g0283yg.jpg" alt="京东">
+        <img src="https://ww2.sinaimg.cn/large/006tKfTcgy1fbwglh19dwj304g0283yg.jpg" class="img-responsive"  alt="京东">
         <p><strong>京东</strong></p>
         <p>招聘春节快递员</p>
       </div>
     </div>
     <div class="col-sm-3">
       <div class="thumbnail">
-        <img src="https://ww2.sinaimg.cn/large/006tKfTcgy1fbwgmx2zmaj304g0283yc.jpg" alt="geely">
+        <img src="https://ww2.sinaimg.cn/large/006tKfTcgy1fbwgmx2zmaj304g0283yc.jpg" class="img-responsive"  alt="geely">
         <p><strong>吉利汽车</strong></p>
         <p>招聘春节维修员</p>
       </div>
     </div>
     <div class="col-sm-3">
       <div class="thumbnail">
-        <img src="https://ww4.sinaimg.cn/large/006tKfTcgy1fbwgql6ve9j302s01et8k.jpg" alt="lanyueliang">
+        <img src="https://ww4.sinaimg.cn/large/006tKfTcgy1fbwgql6ve9j302s01et8k.jpg" class="img-responsive"  alt="lanyueliang">
         <p><strong>蓝月亮</strong></p>
         <p>招聘春节超市促销员</p>
       </div>
