--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -1,4 +1,6 @@
-<div class="pull-right">
+
+<div class="pull-right" style="margin-top 50px">
+
   <%= link_to("Add a job", new_admin_job_path, :class => "btn btn-default") %>
 </div>
 <br><br>
