--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,7 +1,7 @@
 <! DOCTYPE html>
 <html>
   <head>
-    <title> Job Listing </title>
+    <title style="margin-top 50px"> Job Listing </title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application',media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application','data-turbolinks-track': 'reload' %>
