--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,3 +1,6 @@
+  <%= render :partial => "jobs/search_bar"%>
+  <!-- <#%= render "search_bar"%> -->
+
   <div class="col-md-12" style="margin-top:50px">
 
   <div class="dropdown clearfix pull-right">
