debug which cant post search

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,5 +1,7 @@
-  <%= render :partial => "jobs/search_bar"%>
+  <!-- <#%= render :partial => "jobs/search_bar"%> -->
   <!-- <#%= render "search_bar"%> -->
+<%= render :partial => "jobs/search_bar"%>
+
 
   <div class="col-md-12" style="margin-top:50px">
 
