--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -248,3 +248,6 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   margin-left: 30px;
   margin-right: 30px;
 }
+.row{
+  margin-top: 30px;
+}
