--- a/app/views/jobs/_search_bar.html.erb
+++ b/app/views/jobs/_search_bar.html.erb
@@ -1,8 +1,9 @@
 <div class="row">
     <div class="col-sm-9 col-lg-8 col-lg-offset-2">
-        <%= form_tag search_jobs_path, :class => "jobs-search-form" do %>
+        <%= form_tag search_jobs_path, :method => :get, :class => "jobs-search-form" do %>
         <div class="input-group">
-            <input type="text" class="form-control" name="q" value="<%= parmas[:q]%>" placeholder="search for keyword...">
+            <input type="text" class="form-control" name="q" value="<%= params[:q]%>" placeholder="搜索需要的工作...">
+
             <span class="input-group-btn">
                 <button type="submit" class="btn btn-default btn-info">
                     <span class="glyphicon glyphican-search"></span>
