--- a/app/views/jobs/search.html.erb
+++ b/app/views/jobs/search.html.erb
@@ -1,5 +1,7 @@
 <%= render :partial => "jobs/search_bar" %>
 
+<br>
+
 <div class="col-md-12">
 
     <% if @jobs.blank?%>
@@ -8,9 +10,9 @@
         没有找到合适的工作，请重新查找。
     </h3>
     <% else %>
-    <h3 class="text-center" style="margin-top: 30px;">Total find
+    <h3 class="text-center" style="margin-top: 30px;">共找到
         <%= @jobs.count %>
-        jobs</h3>
+        个工作</h3>
     <hr/>
     <table class="table table-borderd">
         <% @jobs.each do |job| %>
